--- a/notebooks/critical_heat_flux.ipynb
+++ b/notebooks/critical_heat_flux.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 351,
    "id": "9c9e13af-f1e1-457a-b111-52e8225279d8",
    "metadata": {},
    "outputs": [],
@@ -46,12 +46,14 @@
     "import pingouin as pg\n",
     "\n",
     "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.utils import shuffle\n",
     "from sklearn.impute import KNNImputer\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
     "from sklearn.model_selection import GridSearchCV\n",
@@ -104,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 352,
    "id": "66a8ab57-d662-4404-8b26-3338bf5df881",
    "metadata": {},
    "outputs": [],
@@ -1576,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 353,
    "id": "07d5a8b9-2a27-492d-b960-52371dfaa993",
    "metadata": {},
    "outputs": [],
@@ -1607,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 354,
    "id": "8adc3029-e016-448d-8d1b-fdfff47c43e4",
    "metadata": {},
    "outputs": [],
@@ -1632,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 355,
    "id": "08251ff2-45a1-4a77-abb3-0143105df3ab",
    "metadata": {},
    "outputs": [],
@@ -1650,7 +1652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 356,
    "id": "b4b9d55b-1ff7-4ad1-9b05-42673d24ecf8",
    "metadata": {},
    "outputs": [],
@@ -1681,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 357,
    "id": "2cfbe19f-86e3-495c-844f-2a7f3fd7fa12",
    "metadata": {},
    "outputs": [],
@@ -1709,40 +1711,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": null,
    "id": "b7bdf1b2-d07c-4e01-8126-ffda81ff39c8",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: 'tube'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [278], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m knnimputer \u001b[38;5;241m=\u001b[39m KNNImputer(n_neighbors\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m, missing_values\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mnan)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Fit the imputer \u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m knnimputer \u001b[38;5;241m=\u001b[39m \u001b[43mknnimputer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfull_train_data\u001b[49m\u001b[43m[\u001b[49m\u001b[43mcategorical_features\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# Impute numerical features in train set\u001b[39;00m\n\u001b[0;32m      8\u001b[0m full_train_data[categorical_features] \u001b[38;5;241m=\u001b[39m knnimputer\u001b[38;5;241m.\u001b[39mtransform(full_train_data[categorical_features])\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\impute\\_knn.py:226\u001b[0m, in \u001b[0;36mKNNImputer.fit\u001b[1;34m(self, X, y)\u001b[0m\n\u001b[0;32m    223\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    224\u001b[0m     force_all_finite \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mallow-nan\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m--> 226\u001b[0m X \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_validate_data\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    227\u001b[0m \u001b[43m    \u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    228\u001b[0m \u001b[43m    \u001b[49m\u001b[43maccept_sparse\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m    229\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mFLOAT_DTYPES\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    230\u001b[0m \u001b[43m    \u001b[49m\u001b[43mforce_all_finite\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mforce_all_finite\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    231\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcopy\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcopy\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    232\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    234\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_fit_X \u001b[38;5;241m=\u001b[39m X\n\u001b[0;32m    235\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_mask_fit_X \u001b[38;5;241m=\u001b[39m _get_mask(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_fit_X, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmissing_values)\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\base.py:565\u001b[0m, in \u001b[0;36mBaseEstimator._validate_data\u001b[1;34m(self, X, y, reset, validate_separately, **check_params)\u001b[0m\n\u001b[0;32m    563\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mValidation should be done on X, y or both.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    564\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m no_val_X \u001b[38;5;129;01mand\u001b[39;00m no_val_y:\n\u001b[1;32m--> 565\u001b[0m     X \u001b[38;5;241m=\u001b[39m check_array(X, input_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mX\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mcheck_params)\n\u001b[0;32m    566\u001b[0m     out \u001b[38;5;241m=\u001b[39m X\n\u001b[0;32m    567\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m no_val_X \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m no_val_y:\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\utils\\validation.py:879\u001b[0m, in \u001b[0;36mcheck_array\u001b[1;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, estimator, input_name)\u001b[0m\n\u001b[0;32m    877\u001b[0m         array \u001b[38;5;241m=\u001b[39m xp\u001b[38;5;241m.\u001b[39mastype(array, dtype, copy\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m    878\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 879\u001b[0m         array \u001b[38;5;241m=\u001b[39m \u001b[43m_asarray_with_order\u001b[49m\u001b[43m(\u001b[49m\u001b[43marray\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43morder\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43morder\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mxp\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mxp\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    880\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m ComplexWarning \u001b[38;5;28;01mas\u001b[39;00m complex_warning:\n\u001b[0;32m    881\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    882\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mComplex data not supported\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(array)\n\u001b[0;32m    883\u001b[0m     ) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcomplex_warning\u001b[39;00m\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\utils\\_array_api.py:185\u001b[0m, in \u001b[0;36m_asarray_with_order\u001b[1;34m(array, dtype, order, copy, xp)\u001b[0m\n\u001b[0;32m    182\u001b[0m     xp, _ \u001b[38;5;241m=\u001b[39m get_namespace(array)\n\u001b[0;32m    183\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m xp\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnumpy\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnumpy.array_api\u001b[39m\u001b[38;5;124m\"\u001b[39m}:\n\u001b[0;32m    184\u001b[0m     \u001b[38;5;66;03m# Use NumPy API to support order\u001b[39;00m\n\u001b[1;32m--> 185\u001b[0m     array \u001b[38;5;241m=\u001b[39m \u001b[43mnumpy\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43masarray\u001b[49m\u001b[43m(\u001b[49m\u001b[43marray\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43morder\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43morder\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    186\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m xp\u001b[38;5;241m.\u001b[39masarray(array, copy\u001b[38;5;241m=\u001b[39mcopy)\n\u001b[0;32m    187\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\generic.py:2070\u001b[0m, in \u001b[0;36mNDFrame.__array__\u001b[1;34m(self, dtype)\u001b[0m\n\u001b[0;32m   2069\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__array__\u001b[39m(\u001b[38;5;28mself\u001b[39m, dtype: npt\u001b[38;5;241m.\u001b[39mDTypeLike \u001b[38;5;241m|\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m np\u001b[38;5;241m.\u001b[39mndarray:\n\u001b[1;32m-> 2070\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43masarray\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_values\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: 'tube'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Instantiate the imputer using the meadian (skewed features)\n",
-    "knnimputer = KNNImputer(n_neighbors=2, missing_values=np.nan)\n",
+    "# Identify rows with missing 'geometry' values in both train_data and test_data\n",
+    "train_missing_geometry_mask = full_train_data['geometry'].isnull()\n",
+    "test_missing_geometry_mask = test_data['geometry'].isnull()\n",
     "\n",
-    "# Fit the imputer \n",
-    "knnimputer = knnimputer.fit(full_train_data[categorical_features])\n",
+    "# Split the train_data into two parts: one with non-missing 'geometry' values and one with missing 'geometry' values\n",
+    "X_train = full_train_data.loc[~train_missing_geometry_mask, numerical_features]\n",
+    "y_train = full_train_data.loc[~train_missing_geometry_mask, 'geometry']\n",
+    "X_test = full_train_data.loc[train_missing_geometry_mask, numerical_features]\n",
     "\n",
-    "# Impute numerical features in train set\n",
-    "full_train_data[categorical_features] = knnimputer.transform(full_train_data[categorical_features])\n",
+    "# Impute missing values in the numerical features using KNNImputer\n",
+    "imputer = KNNImputer(n_neighbors=3)\n",
+    "X_train_imputed = imputer.fit_transform(X_train)\n",
+    "X_test_imputed = imputer.transform(X_test)\n",
     "\n",
-    "# Impute categorical features in test set\n",
-    "test_data[numerical_features] = knnimputer.transform(test_data[categorical_features])"
+    "# Train a classifier model to predict the missing 'geometry' values based on numerical features\n",
+    "classifier = RandomForestClassifier()\n",
+    "classifier.fit(X_train_imputed, y_train)\n",
+    "\n",
+    "# Predict missing 'geometry' values in train_data\n",
+    "predicted_geometry_train = classifier.predict(X_test_imputed)\n",
+    "\n",
+    "# Shuffle the predicted values and reset index\n",
+    "predicted_geometry_train = shuffle(predicted_geometry_train, random_state=42).reset_index(drop=True)\n",
+    "\n",
+    "# Replace missing 'geometry' values in the original train_data with the predicted values\n",
+    "full_train_data.loc[train_missing_geometry_mask, 'geometry'] = predicted_geometry_train\n",
+    "\n",
+    "# Impute missing values in the numerical features of test_data using the trained imputer\n",
+    "X_test_imputed = imputer.transform(test_data[numerical_features])\n",
+    "\n",
+    "# Predict missing 'geometry' values in test_data\n",
+    "predicted_geometry_test = classifier.predict(X_test_imputed)\n",
+    "\n",
+    "# Replace missing 'geometry' values in the original test_data with the predicted values\n",
+    "test_data.loc[test_missing_geometry_mask, 'geometry'] = predicted_geometry_test\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40aa3879-7588-46af-a50c-f1966d9c0dcb",
+   "metadata": {},
+   "source": [
+    "## Log-transform and Scale numerical features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16c8e44f-f956-4161-9405-38c741a0116e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
