--- a/notebooks/critical_heat_flux.ipynb
+++ b/notebooks/critical_heat_flux.ipynb
@@ -1964,19 +1964,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "07e0458c-62d1-4f30-9147-b12bb8a0092b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [51], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Apply one-hot encoding on the 'geometry' column\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m encoded_geometry \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mget_dummies(\u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mgeometry\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m, prefix\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgeometry\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
+     ]
+    }
+   ],
    "source": [
     "# Apply one-hot encoding on the 'geometry' column\n",
-    "encoded_geometry = pd.get_dummies(data['geometry'], prefix='geometry')\n",
-    "\n",
-    "# Concatenate the original DataFrame with the encoded 'geometry' DataFrame\n",
-    "encoded_data = pd.concat([data, encoded_geometry], axis=1)\n",
-    "\n",
-    "# Print the encoded dataset\n",
-    "print(encoded_data)"
+    "encoded_geometry = pd.get_dummies(data['geometry'], prefix='geometry')"
    ]
   },
   {
