--- a/notebooks/critical_heat_flux.ipynb
+++ b/notebooks/critical_heat_flux.ipynb
@@ -4348,7 +4348,7 @@
    "outputs": [],
    "source": [
     "# Generate predictions with test set with the besst performing model (based on RMSE)\n",
-    "submission_predictions = best_model_rf.predict(test_data_scaled)"
+    "submission_predictions = best_model_xgb.predict(test_data_scaled)"
    ]
   },
   {
