--- a/notebooks/s3e16_crab_age.ipynb
+++ b/notebooks/s3e16_crab_age.ipynb
@@ -755,7 +755,7 @@
    "id": "e1e297ae-92ca-4cf5-a87a-cf03f7d3c415",
    "metadata": {},
    "source": [
-    "## Numeric Feature Distribution Challenge vs Original Data KDEs"
+    "## Label Distribution Challenge vs Original Data KDEs"
    ]
   },
   {
