--- a/notebooks/s3e17_machine_failures.ipynb
+++ b/notebooks/s3e17_machine_failures.ipynb
@@ -842,6 +842,14 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a95ea0f-0939-47ee-88c7-243bfdf56c69",
+   "metadata": {},
+   "source": [
+    "## Label Distribution Challenge vs Original Data KDEs"
+   ]
   }
  ],
  "metadata": {
