--- a/notebooks/s3e16_crab_age.ipynb
+++ b/notebooks/s3e16_crab_age.ipynb
@@ -1328,9 +1328,7 @@
     "### Whats nexts\n",
     "\n",
     "- Feature engineering:\n",
-    "  - Create a Adult (F+M) vs Underage (I) column (Age_2)\n",
-    "\n",
-    "\n"
+    "  - Create a Adult (F+M) vs Underage (I) column (Age_2)"
    ]
   },
   {
