--- a/notebooks/s3e17_machine_failures.ipynb
+++ b/notebooks/s3e17_machine_failures.ipynb
@@ -1095,6 +1095,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce7b0771-6475-41f3-81ae-33cfcb9d1b95",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "ec33f0ee-256a-48c9-8bc2-d888241477f5",
    "metadata": {},
@@ -1102,6 +1110,7 @@
     "## Conclusions\n",
     "\n",
     "- We see that the fail categories in the features and in the label are **highly unbalanced**\n",
+    "- The machines looks to operate in the same range of condistions despite the type\n",
     "\n",
     "### Whats nexts"
    ]
