--- a/notebooks/s3e17_machine_failures.ipynb
+++ b/notebooks/s3e17_machine_failures.ipynb
@@ -1437,12 +1437,12 @@
    "source": [
     "## Renaming Columns\n",
     "\n",
-    "Some libraries like XGBoost don't work with special characters line [], so let's remove "
+    "Some libraries like XGBoost don't work with special characters like [ ], so let's remove them from the columns name "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 79,
    "id": "4bc63a67-2fde-4d82-ba14-a83bf2df761d",
    "metadata": {},
    "outputs": [
@@ -1455,7 +1455,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1466,7 +1466,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
+   "id": "e2cb7472-b8fb-4055-ae7a-6925c8fa85b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a dictionary with new column names\n",
+    "new_column_names = {'Air temperature [K]' : 'Air temperature', \n",
+    "                    'Process temperature [K]' : 'Process temperature',\n",
+    "                    'Rotational speed [rpm]' : 'Rotational speed', \n",
+    "                    'Torque [Nm]' : 'Torque', \n",
+    "                    'Tool wear [min]' : 'Tool wear'}\n",
+    "\n",
+    "# Rename the columns\n",
+    "train_data = train_data.rename(columns=new_column_names)\n",
+    "\n",
+    "test_data = test_data.rename(columns=new_column_names)\n",
+    "\n",
+    "orig_data = orig_data.rename(columns=new_column_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "id": "acf67296-9b97-4fd8-b0c1-fc1637d7cd1c",
    "metadata": {},
    "outputs": [],
@@ -1485,15 +1507,239 @@
     "    \n",
     "    # Create engineered features\n",
     "    # Create a new columns to distinguish 'young' (U) vs \"adult\" (A) crabs\n",
-    "    data['Air Temperature per Process temperature]  = data['Sex'].map({'M': 'A', 'F': 'A', 'I': 'U'})\n",
+    "    data['Air temperature per Process temperature']  = data['Air temperature'] * data['Process temperature'] \n",
     "    \n",
-    "    data['Weight per Diameter'] = data['Weight'] * data['Diameter']\n",
+    "    data['Temperature ratio'] = data['Process temperature'] / data['Air temperature']\n",
     "    \n",
-    "    data['Length per Diameter per Height'] = data['Length'] * data['Diameter'] * data['Height']\n",
+    "    data['Toque per Rotational speed'] = data['Torque'] * data['Rotational speed']\n",
     "    \n",
-    "    data['Shucked per Viscera per Shell Weight'] = data['Shucked Weight'] * data['Viscera Weight'] * data['Shell Weight']\n",
+    "    data['Torque Rotational speed ratio'] = data['Torque'] / data['Rotational speed']\n",
+    "         \n",
+    "    data['Failure sum'] = data[['TWF', 'HDF', 'PWF', 'OSF', 'RNF']].sum(axis=1)\n",
     "         \n",
     "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "cef2f5f7-0389-44d9-be01-d8c05bbec677",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Engineering features in train data\n",
+    "train_data = compute_engineered_features(train_data.copy())\n",
+    "\n",
+    "# Engineering features in original data\n",
+    "orig_data = compute_engineered_features(orig_data.copy())\n",
+    "\n",
+    "# Engineering features in test data\n",
+    "test_data = compute_engineered_features(test_data.copy())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c6454f2-42c0-4c33-87f4-f971fb90e8e2",
+   "metadata": {},
+   "source": [
+    "## Concatenate Training and Original Datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "da4e184c-7609-4669-ac7d-452df4c0593b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_train_data = pd.concat([train_data, orig_data], axis=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43e87435-1f70-484c-a828-74f9c0e886ee",
+   "metadata": {},
+   "source": [
+    "## Defining Features and Label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "3376a66b-04bb-46c7-a5f1-f58bec9107c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Product ID', 'Type', 'Air temperature', 'Process temperature',\n",
+       "       'Rotational speed', 'Torque', 'Tool wear', 'Machine failure', 'TWF',\n",
+       "       'HDF', 'PWF', 'OSF', 'RNF', 'Air temperature per Process temperature',\n",
+       "       'Temperature ratio', 'Toque per Rotational speed',\n",
+       "       'Torque Rotational speed ratio', 'Failure sum'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_train_data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "bc389ae3-b346-4905-9e13-9e87def4fb14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numerical_features = ['Air temperature', \n",
+    "                      'Process temperature',\n",
+    "                      'Rotational speed', \n",
+    "                      'Torque', \n",
+    "                      'Tool wear', \n",
+    "                      'Air temperature per Process temperature',\n",
+    "                      'Temperature ratio', \n",
+    "                      'Toque per Rotational speed',\n",
+    "                      'Torque Rotational speed ratio', \n",
+    "                      'Failure sum']\n",
+    "\n",
+    "categorical_features = ['Type',\n",
+    "                        'TWF',\n",
+    "                        'HDF', \n",
+    "                        'PWF', \n",
+    "                        'OSF', \n",
+    "                        'RNF']\n",
+    "\n",
+    "label = ['Machine failure']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80efd778-7648-43b1-916e-77e99e8eb83d",
+   "metadata": {},
+   "source": [
+    "## Scale and Normalize Numerical Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "cf9e02a6-0232-4ee7-9e0c-98ee6741a3d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the pipeline\n",
+    "pipeline = Pipeline([\n",
+    "    ('scaler', MinMaxScaler()),\n",
+    "    ('transformer', PowerTransformer())\n",
+    "])\n",
+    "\n",
+    "# Fit and transform the train data using the pipeline\n",
+    "transformed_train_data = pd.DataFrame(pipeline.fit_transform(full_train_data[numerical_features]))\n",
+    "\n",
+    "# Scaling removed column names - put them back\n",
+    "transformed_train_data.columns = numerical_features\n",
+    "\n",
+    "# Reset index\n",
+    "transformed_train_data.index = full_train_data.index\n",
+    "\n",
+    "# Transform test data\n",
+    "transformed_test_data = pd.DataFrame(pipeline.transform(test_data[numerical_features]))\n",
+    "\n",
+    "# Scaling removed column names - put them back\n",
+    "transformed_test_data.columns = numerical_features\n",
+    "\n",
+    "# Reset index\n",
+    "transformed_test_data.index = test_data.index"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60f0a18d-255f-4e2d-ab04-1416c605e27c",
+   "metadata": {},
+   "source": [
+    "## Encoding Categorical Features + Concat Transformed Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "9f5f902c-cbf9-481e-89b9-e33fd76c7786",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply one-hot encoding on the 'Type' column in the train set\n",
+    "encoded_type = pd.get_dummies(full_train_data['Type'], prefix='Type')\n",
+    "\n",
+    "# Concat encoded_sex to transformed_train_data\n",
+    "transformed_train_data = pd.concat([transformed_train_data, encoded_type], axis=1)\n",
+    "\n",
+    "# Apply one-hot encoding on the 'Type' column in the test set\n",
+    "encoded_type = pd.get_dummies(test_data['Type'], prefix='Type')\n",
+    "\n",
+    "# Concat encoded_geometry to transformed_test_data\n",
+    "transformed_test_data = pd.concat([transformed_test_data, encoded_type], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4976da62-c85e-4f70-a720-b35157895e2b",
+   "metadata": {},
+   "source": [
+    "## Splitting Data Between Train and Test Set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "79abe57b-3561-4bf0-b07e-10d1de36b686",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defining a seed\n",
+    "seed = 108"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "aa6e651e-3576-4a5a-98cf-1fb9e37641b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define X and y for the training set\n",
+    "X = transformed_train_data\n",
+    "y = np.ravel(full_train_data[label])\n",
+    "\n",
+    "# Splitting train dataset into train and test\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=seed)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05c563d2-ed59-4fb5-967d-bcef2f98df93",
+   "metadata": {},
+   "source": [
+    "<a name=\"4\"></a>\n",
+    "# Model Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4206d000-8b28-4e5e-b77f-3fe32a870b07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define metric(s) to compare the models\n",
+    "metrics = ['MAE']\n",
+    "\n",
+    "# Initialize DataFrame of model performance\n",
+    "performance = pd.DataFrame(columns=metrics)"
    ]
   }
  ],
