--- a/notebooks/s3e17_machine_failures.ipynb
+++ b/notebooks/s3e17_machine_failures.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 97,
    "id": "ac1691bd-05ab-4e80-b52e-9e96037ab677",
    "metadata": {},
    "outputs": [],
@@ -53,8 +53,10 @@
     "from sklearn.preprocessing import MinMaxScaler, PowerTransformer\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "from sklearn.metrics import roc_curve, roc_auc_score\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.model_selection import learning_curve, LearningCurveDisplay, ShuffleSplit\n",
     "\n",
@@ -1730,16 +1732,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "id": "4206d000-8b28-4e5e-b77f-3fe32a870b07",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define metric(s) to compare the models\n",
-    "metrics = ['MAE']\n",
+    "metrics = ['ROC_AUC']\n",
     "\n",
     "# Initialize DataFrame of model performance\n",
     "performance = pd.DataFrame(columns=metrics)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "672e0009-8c61-4030-aa36-b43f4720a88d",
+   "metadata": {},
+   "source": [
+    "## Logistic Regression\n",
+    "\n",
+    "Baseline model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6cca58ad-9954-4636-8e78-716da0df8da3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate a LogisticRegression model\n",
+    "model_lr = LogisticRegression()\n",
+    "\n",
+    "# Fit logreg to the train set\n",
+    "model_lr.fit(X_train, y_train)\n",
+    "\n",
+    "# predict y_pred values\n",
+    "y_pred_lr = model_lr.predict(X_test)\n",
+    "\n",
+    "# Compute MAE metric\n",
+    "mae_lr = round(mean_absolute_error(y_test, y_pred_lr) ** 0.5, 4)\n",
+    "\n",
+    "print('MAE: {}'.format(mae_lr))"
    ]
   }
  ],
