--- a/notebooks/s3e17_machine_failures.ipynb
+++ b/notebooks/s3e17_machine_failures.ipynb
@@ -1732,13 +1732,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 99,
    "id": "4206d000-8b28-4e5e-b77f-3fe32a870b07",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define metric(s) to compare the models\n",
-    "metrics = ['ROC_AUC']\n",
+    "metrics = ['AUC_ROC']\n",
     "\n",
     "# Initialize DataFrame of model performance\n",
     "performance = pd.DataFrame(columns=metrics)"
@@ -1756,25 +1756,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
+   "id": "f25ad0cc-bca3-423c-9e0d-37286ddda19e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(98107,)"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
    "id": "6cca58ad-9954-4636-8e78-716da0df8da3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC_ROC: 0.9437955794371067\n"
+     ]
+    }
+   ],
    "source": [
     "# Instantiate a LogisticRegression model\n",
-    "model_lr = LogisticRegression()\n",
+    "model_lr = LogisticRegression(max_iter=1000)\n",
     "\n",
     "# Fit logreg to the train set\n",
     "model_lr.fit(X_train, y_train)\n",
     "\n",
     "# predict y_pred values\n",
-    "y_pred_lr = model_lr.predict(X_test)\n",
+    "y_pred_lr = model_lr.predict_proba(X_test)[:, 1]\n",
     "\n",
-    "# Compute MAE metric\n",
-    "mae_lr = round(mean_absolute_error(y_test, y_pred_lr) ** 0.5, 4)\n",
+    "# Compute AUC_ROC metric\n",
+    "auc_roc_lr = roc_auc_score(y_test, y_pred_lr)\n",
     "\n",
-    "print('MAE: {}'.format(mae_lr))"
+    "print('AUC_ROC: {}'.format(auc_roc_lr))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8fdd9c3-2a5b-4284-b7b7-97a2b85246d4",
+   "metadata": {},
+   "source": [
+    "## Random Forest Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "98ca19de-7815-42d8-93a6-ab6b63b0bb31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUC_ROC: 0.9602258451412357\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Instantiate a RandomForestClassifier model\n",
+    "model_rfc = RandomForestClassifier(n_estimators=50, max_depth=3, class_weight='balanced', random_state=seed)\n",
+    "\n",
+    "# Fit logreg to the train set\n",
+    "model_rfc.fit(X_train, y_train)\n",
+    "\n",
+    "# predict y_pred values\n",
+    "y_pred_rfc = model_rfc.predict_proba(X_test)[:, 1]\n",
+    "\n",
+    "# Compute AUC_ROC metric\n",
+    "auc_roc_rfc = roc_auc_score(y_test, y_pred_rfc)\n",
+    "\n",
+    "print('AUC_ROC: {}'.format(auc_roc_rfc))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce8ce487-4f64-4908-973c-190e5f264b27",
+   "metadata": {},
+   "source": [
+    "## XGBClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0684ac3-50f0-4199-abcf-30ab3a02729b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
